--- a/karen.tex
+++ b/karen.tex
@@ -51,6 +51,7 @@
 
 \input{macros/macros.tex}
 \input{macros/authnote_macros.tex}
+%\input{macros/track_changes_macros.tex}
 \input{macros/misc_mac.tex}
 \input{macros/aliases.tex}
 
