Should be able to expand each chapter now

--- a/karen.tex
+++ b/karen.tex
@@ -54,6 +54,7 @@
 %\input{macros/track_changes_macros.tex}
 \input{macros/misc_mac.tex}
 \input{macros/aliases.tex}
+\input{macros/table_macros.tex} 
 
 \begin{document}
 
@@ -87,11 +88,11 @@ The RBF community has traditionally focused on global schemes.
 \input{chapter2.tex}
 \input{chapter3.tex} 
 \input{chapter4.tex} 
-
-need chapter stating publications and talks, internships, developer status
-need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
+\input{chapter5.tex} 
+\input{chapter6.tex}
 
 \input{publications.tex}
+need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
 
 %\chapter{Review}
 %\begin{itemize} 
